Tô tentando deixar o projeto um pouco mais bonito, pra depois mexer mais na responsividade, vale lembrar que estou aprendendo com este projeto... Enfim, só adicionei algumas classes css, e mais umas tags no html, nada no js

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <link rel="stylesheet" href="../CSS/inicio.css">
-    <head>
-        Suas Finanças
+    <head class="head_">
+        <div class = "divPai">
+            <div class="div1">
+                Finanças pessoais
+            </div>
+            <div class="div2">
+                <a href="">Home da Página</a>
+                <a href="">Sobre</a>
+                <a href="">Contato</a>
+            </div>
+        </div>
     </head>
-    <h1>
-        <span class = "titulo"> Finanças Pessoais </span>
-        
-    </h1>
+    <body>
+        <div class = 'divTitulo'>
+            <h1>
+                <span class = "titulo" id ='minhaId'> Finanças Pessoais </span>
+            </h1>
+        </div>
+    </body>
+    <footer>
+
+    </footer>
+    <script type="text/javascript" src="../JavaScript/Inicio.js"></script>
 </html>
